asset/css/admin.css
/* ... */
.edit .current-row {
  margin-bottom: 12px;
}

.add .current-row {
  height: calc(100vh - 180px);
}

.current-row.horizontal .media-viewer {
  width: calc(40% - 6px);
  float: left;
  margin-right: 12px;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  height: calc(100% - 96px);
}

.current-row.horizontal form {
  width: calc(60% - 6px);
  float: right;
  overflow-y: scroll;
  height: calc(100% - 48px);
}

.current-row.vertical {
  position: relative;
}

.current-row.vertical .media-viewer {
  width: 100%;
  text-align: center;
  height: 50%;
  overflow: hidden;
  margin-bottom: 12px;
}

.current-row.horizontal .media-container,
.current-row.horizontal .panzoom-container,
.current-row.vertical .panzoom-container {
  height: 100%;
}

.current-row.vertical .media-container {
  height: calc(100% - 42px);  
}

.current-row.vertical .media-viewer img {
  width: 100%;
}

.current-row.vertical form {
  height: calc(50% - 72px);
  overflow-y: scroll;
}

.current-row fieldset {
  margin: 0;
}

.current-row fieldset p {
  margin: 0;
}

.current-row fieldset p:last-of-type {
  margin-bottom: 12px;
}

.current-row legend {
  padding: 6px 0;
}

.current-row .panzoom-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.expanded-right .current-row.horizontal .media-viewer,
.expanded-right .current-row.horizontal form {
  width: calc(50% - 6px);
}

.fullscreen .current-row {
  position: fixed;
  top: 48px;
  right: 0;
  left: 0;
  bottom: 0;
  overflow-y: hidden;
  background-color: #fff;
  padding: 6px 20px;
  height: calc(100% - 6rem);
  z-index: 2;
}

div[role="main"].fullscreen > h1:first-of-type {
  z-index: 1;
}

.common-elements {
  padding: 6px;
  background-color: rgba(0,0,0,0.04);
  display: flex;
}

.common-elements label {
  display: inline-block;
  margin-right: 24px;
}

.common-elements input[type="checkbox"] {
  margin-left: 6px;
}

.current-row fieldset {
  position: relative;
  margin-bottom: 12px;
}

.current-row fieldset.set-to-null .field,
.current-row fieldset.set-to-null .common-elements {
  position: relative;
}

.current-row fieldset.set-to-null .field:after,
.current-row fieldset.set-to-null .common-elements:after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: rgba(255,255,255,.5);
}

.common-elements label.set-null-checkbox {
  margin: 0 0 0 auto;
  position: relative;
  z-index: 2;
}

/* Form Builder */

#form-builder-fields .dataset-field {
  position: relative;
  padding: 4px;
  background-color: rgba(0,0,0,0.04);
  margin-bottom: 8px;
}

.dataset-field > legend {
  float: left;
  display: flex;
  align-items: center;
  padding: 0;
  font-weight: bold;
  position: relative;
  margin-top: -4px;
  width: calc(100% - 192px);
  height: 44px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 8px;
}

#form-builder-fields .dataset-field:before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  height: 44px;
  background-color: rgba(0,0,0,0.12);
}

#form-builder-fields .dataset-field.closed legend {
  margin-bottom: 0;
}

legend .data-type-label {
  font-weight: normal;
  font-size: 14px;
  padding: 0 8px;
  background-color: rgba(0,0,0,.5);
  color: #fff;
  display: inline-block;
  position: relative;
  letter-spacing: 1px;
  margin-left: 16px;
  max-width: 50%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

legend .field-label {
  position: relative;
  max-width: calc(100% - 296px);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.field-actions {
  position: absolute;
  top: 0;
  right: 4px;
  margin-top: 4px;
  text-align: right;
  z-index: 10;
}

.field-actions button {
  box-shadow: none;
  background-color: transparent;
  opacity: .75;
  cursor: pointer;
  width: 36px;
}

.field-actions button:hover {
  box-shadow: none;
  opacity: 1;
  cursor: pointer;
}

#form-builder-fields .dataset-field:only-of-type .field-position-increment,
#form-builder-fields .dataset-field:only-of-type .field-position-decrement,
#form-builder-fields .dataset-field:first-of-type .field-position-decrement,
#form-builder-fields .dataset-field:last-of-type .field-position-increment {
  display: none;
}

.field-enable,
.field-disable,
.field-collapse,
.field-expand {
  display: none;
}

.field-actions .active {
  display: inline-block;
}

#form-builder-fields .field {
  padding: 0;
  border-color: transparent;
  background-color: transparent;
}

fieldset.closed .field,
fieldset.closed .dataset-field-data legend {
  height: 0;
  overflow: hidden;
  margin: 0;
  padding: 0;
}

#form-builder-fields .dataset-field:not(.open) {
  padding-bottom: 0;
}

#form-builder-fields .dataset-field.deleted:before {
  background-color: #fcc;
}

#form-builder-fields .dataset-field.deleted button:disabled {
  display: none;
}

#form-builder-fields .dataset-field.deleted button {
  color: #A91919;
}

#form-builder-fields .dataset-field.deleted .data-type-label {
  background-color: #A9191987;
}

.dataset-field.closed .dataset-field-data {
  margin: 0;
}

fieldset.open .dataset-field-data legend {
  border-bottom: 1px solid #dfdfdf;
  margin: 0 0 6px;
  width: 100%;
  padding: 6px 0;
  font-size: 16px
}

.last-saved-timestamp {
  text-align: center;
  font-size: .875rem;
}

/* Sidebar */

body.sidebar-open #content.expanded {
    width: calc(81.25% - 12px);
}

.sidebar.always-open {
    padding-left: 23px;
}

.sidebar.always-open.collapsed {
    left: 100%;
    overflow: visible;
}

button.sidebar-drawer {
    position: fixed;
    top: 48px;
    left: 75%;
    bottom: -12px;
    width: 12px;
    padding: 0;
    border-radius: 0;
    background-color: #f7f7f7;
    box-shadow: none;
    border-right: 1px solid #dfdfdf;
    border-left: 1px solid #dfdfdf;
    transition: left .5s;
    z-index: 1;
}

button.sidebar-drawer.expand {
    left: calc(100% - 12px);
}

button.sidebar-drawer:hover {
    box-shadow: none;
}
/* ... */

